--- a/ZenCat-Front-Admin/package.json
+++ b/ZenCat-Front-Admin/package.json
@@ -10,21 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-router/dev": "^7.5.3",
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-collapsible": "^1.1.8",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
+    "@radix-ui/react-separator": "^1.1.4",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.75.0",
+    "@tanstack/react-router": "^1.119.0",
+    "@tanstack/react-router-devtools": "^1.119.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.3",
-    "react-router-dom": "^7.5.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@tanstack/router-plugin": "^1.119.0",
+    "@tanstack/router-vite-plugin": "^1.119.0",
     "@types/node": "^22.15.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
