--- a/ZenCat-Front-Admin/.env
+++ b/ZenCat-Front-Admin/.env
@@ -1,1 +1,2 @@
 VITE_API_BASE_URL=http://localhost:8098
+VITE_GOOGLE_CLIENT_ID=673710656110-4k1u3sjaesa5onjkhi0kctrnp9a073c6.apps.googleusercontent.com
