--- a/ZenCat-Front-Admin/package.json
+++ b/ZenCat-Front-Admin/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-router": "^1.119.0",
