--- a/ZenCat-Front-User/package.json
+++ b/ZenCat-Front-User/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.75.0",
