--- a/ZenCat-Front-Admin/package.json
+++ b/ZenCat-Front-Admin/package.json
@@ -15,7 +15,7 @@
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-collapsible": "^1.1.8",
-    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.2.2",
@@ -34,7 +34,8 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.5.3",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
