--- a/ZenCat-Front-User/package.json
+++ b/ZenCat-Front-User/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/montserrat": "^5.2.5",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-icons": "^1.3.2",
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.75.0",
-    "@tanstack/react-router": "^1.120.3",
+    "@tanstack/react-router": "^1.120.4",
+    "@tanstack/react-router-devtools": "^1.120.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@tanstack/router-cli": "^1.120.3",
+    "@tanstack/router-plugin": "^1.120.4",
     "@types/node": "^22.15.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
