--- a/ZenCat-Front-User/package.json
+++ b/ZenCat-Front-User/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@fontsource/montserrat": "^5.2.5",
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-separator": "^1.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.75.0",
@@ -21,7 +24,7 @@
     "@tanstack/react-router-devtools": "^1.120.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.503.0",
+    "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.3",
