--- a/ZenCat-Front-User/package.json
+++ b/ZenCat-Front-User/package.json
@@ -10,19 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-icons": "^1.3.2",
+    "@react-oauth/google": "^0.12.2",
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.75.0",
     "@tanstack/react-router": "^1.120.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.3",
+    "react-router-dom": "^7.6.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5"
   },
