--- a/ZenCat-Front-User/package.json
+++ b/ZenCat-Front-User/package.json
@@ -16,24 +16,29 @@
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-primitive": "^2.1.3",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@react-oauth/google": "^0.12.2",
     "@react-router/dev": "^7.5.3",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.75.0",
     "@tanstack/react-router": "^1.120.4",
     "@tanstack/react-router-devtools": "^1.120.4",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
+    "postcss": "^8.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.3",
     "react-router-dom": "^7.6.0",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
