--- a/ZenCat-Front-Admin/package.json
+++ b/ZenCat-Front-Admin/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "install": "^0.13.0",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
@@ -47,6 +48,7 @@
     "@eslint/js": "^9.22.0",
     "@tanstack/router-plugin": "^1.119.0",
     "@tanstack/router-vite-plugin": "^1.119.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22.15.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
