--- a/ZenCat-Front-Admin/package.json
+++ b/ZenCat-Front-Admin/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
