--- a/ZenCat-Front-Admin/package.json
+++ b/ZenCat-Front-Admin/package.json
@@ -31,11 +31,13 @@
     "@tanstack/react-router": "^1.119.0",
     "@tanstack/react-router-devtools": "^1.119.1",
     "@tanstack/react-table": "^8.21.3",
+    "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
