--- a/ZenCat-Front-User/package.json
+++ b/ZenCat-Front-User/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
