--- a/ZenCat-Front-Admin/tsconfig.app.json
+++ b/ZenCat-Front-Admin/tsconfig.app.json
@@ -15,12 +15,14 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
-    /* Linting */
+    /* Linting */ 
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noImplicitAny": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
+    "noEmitOnError": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
