--- a/ZenCat-Front-Admin/package.json
+++ b/ZenCat-Front-Admin/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "bunx vite",
+    "dev": "vite",
     "dev:3001": "vite --port 3001",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
