--- a/ZenCat-Front-User/package.json
+++ b/ZenCat-Front-User/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "bunx vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier --write ."
@@ -45,7 +45,8 @@
     "react-router": "^7.5.3",
     "react-router-dom": "^7.6.0",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "zencat-front-user": "."
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
