--- a/ZenCat-Front-User/package.json
+++ b/ZenCat-Front-User/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "bunx vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier --write ."
@@ -30,6 +30,7 @@
     "@tanstack/react-query": "^5.75.0",
     "@tanstack/react-router": "^1.120.4",
     "@tanstack/react-router-devtools": "^1.120.4",
+    "@tanstack/react-table": "^8.21.3",
     "@types/js-cookie": "^3.0.6",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
