--- a/ZenCat-Front-User/package.json
+++ b/ZenCat-Front-User/package.json
@@ -46,8 +46,7 @@
     "react-router": "^7.5.3",
     "react-router-dom": "^7.6.0",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.8",
-    "zencat-front-user": "."
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
