--- a/ZenCat-Front-Admin/package.json
+++ b/ZenCat-Front-Admin/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-router": "^7.5.3",
+    "recharts": "^3.0.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
