--- a/ZenCat-Front-Admin/package.json
+++ b/ZenCat-Front-Admin/package.json
@@ -36,12 +36,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
+    "react-icons": "^5.5.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-router": "^7.5.3",
