--- a/ZenCat-Front-User/.env
+++ b/ZenCat-Front-User/.env
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL=http://localhost:8098
+VITE_API_BASE_URL=https://astro-cat-backend-production.up.railway.app
+#http://localhost:8098
