--- a/ZenCat-Front-User/netlify.toml
+++ b/ZenCat-Front-User/netlify.toml
@@ -2,3 +2,6 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[build.environment]
+  VITE_API_BASE_URL = "https://astro-cat-backend-production.up.railway.app"
